Fri Sep 13 16:08:52 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h.in include/tdsconvert.h src/dblib/dbopen.c
	  src/dblib/unittests/t0021.c src/tds/convert.c src/tds/iconv.c:
	- Clean up warnings.  It is now possible to compile with
	  "gcc -Werror", at least in some setups.  For HP Compaq Digital
	  Tru64 OSF/1 UNIX 4.0d (and possibly other versions thereof), you
	  will need "-D_OSF_SOURCE -D_XOPEN_EXTENDED_SOURCE" in your CFLAGS
	  for this to work.

Fri Sep 13 21:24:32 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h.in src/apps/tsql.c src/ctlib/ct.c:
	* src/dblib/bcp.c src/dblib/dblib.c src/odbc/odbc.c:
	* src/tds/token.c:
	- unify column_textsize and cur_row_size in TDSCOLINFO
	  (new name column_cur_size)

Fri Sep 13 14:20:10 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h include/syberror.h src/dblib/bcp.c:
	- relocate severity codes from sybdb.h to syberror.h

Fri Sep 13 14:05:56 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/.cvsignore src/pool/.cvsignore:
	- ignore more generated files.

Fri Sep 13 13:57:42 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h.in src/ctlib/ct.c src/dblib/dblib.c
	  src/pool/main.c src/pool/member.c src/tds/login.c
	  src/tds/mem.c src/tds/read.c src/tds/token.c src/tds/util.c
	  src/tds/write.c:
	- Implement tds_close_socket() as requested by Brian.
	- Use same throughout the codebase, wherever a socket is closed.
	- Use -1 instead of 0 as the file descriptor to indicate a closed
	  socket.  0 is a perfectly valid fd, so using it to indicate a
	  closed socket is bad.
	- Use a new macro IS_TDSDEAD(tds) throughout the codebase to check
	  for closed sockets, instead of adhoc expressions like
	  "if (tds && tds->s) { ... }"

Fri Sep 13 10:43:28 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/t0022.c:
	- Check status of dbsqlexec() when trying to create procedure in t0022.